Avalara Fullqa/src/LeanData/objects/Potential_Match__c.object
<CustomObject>
    <fields>
        <fullName>Account_1_Name__c</fullName>
        <label>Account 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_2_Name__c</fullName>
        <label>Account 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <label>Job Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <label>Match Type</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_1_Id__c</fullName>
        <label>Object 1 Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_1_Type__c</fullName>
        <label>Object 1 Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_2_Id__c</fullName>
        <label>Object 2 Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_2_Type__c</fullName>
        <label>Object 2 Type</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Potential Match</label>
    <listViews>
        <fullName>All_Potential_Marketing_Lead_Matches</fullName>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>Job_Id__c</columns>
        <columns>Match_Type__c</columns>
        <columns>Object_1_Id__c</columns>
        <columns>Object_1_Type__c</columns>
        <columns>Object_2_Id__c</columns>
        <columns>Object_2_Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Account_1_Name__c</columns>
        <columns>Account_2_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Object_1_Type__c</field>
            <operation>equals</operation>
            <value>MktgLead</value>
        </filters>
        <label>All Potential Marketing Lead Matches</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Account_1_Name__c</columns>
        <columns>Account_2_Name__c</columns>
        <columns>Job_Id__c</columns>
        <columns>Match_Type__c</columns>
        <columns>Object_1_Id__c</columns>
        <columns>Object_1_Type__c</columns>
        <columns>Object_2_Id__c</columns>
        <columns>Object_2_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today</label>
    </listViews>
    <nameField>
        <label>Potential Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>